# fcp7xml-to-unreal

./: .pre-commit-config.yaml  404.html  Audio.py  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Episode.py  LICENSE  Note.py  README.md  Shot.py  TESTS.md  filter.py  helpers.py  index.html  ingest.py  mkdocs.yml  pyproject.toml  reports.py  reports_ac.py  search.html  syncsketch.py  xml_ui.py
.github/actions/setup-python-with-uv/: action.yml
.github/workflows/: python-package.yml  release-to-pypi.yml  ruff.yml  testing.yml
configuration/: index.html
docs/: configuration.md  film_language.md  index.md  marking_shots.md
film_language/: index.html
marking_shots/: index.html
reports/coverage/: class_index.html  coverage.xml  function_index.html  index.html  status.json  z_05194b4603b92834___init___py.html  z_05194b4603b92834_reports_py.html  z_080e4d931ecdcab4___init___py.html  z_080e4d931ecdcab4_reports_py.html  z_2844a2105c7ecabe___init___py.html  z_2844a2105c7ecabe_xml_ui_py.html  z_546f855daa43ec47___init___py.html  z_546f855daa43ec47_reports_py.html  z_5bae4a917d4832a3___init___py.html  z_5bae4a917d4832a3_xml_ui_py.html  z_5eeb027931a33e93___init___py.html  z_5eeb027931a33e93_xml_ui_py.html  z_6bf700e3ab846690___init___py.html  z_6bf700e3ab846690_reports_py.html  z_6e0498a04c14a936___init___py.html  z_6e0498a04c14a936_xml_ui_py.html  z_71cf08766d4bea4e_Audio_py.html  z_71cf08766d4bea4e_Episode_py.html  z_71cf08766d4bea4e_Note_py.html  z_71cf08766d4bea4e_Shot_py.html  z_71cf08766d4bea4e___init___py.html  z_71cf08766d4bea4e_helpers_py.html  z_8b5f9668c48afee5___init___py.html  z_8b5f9668c48afee5_xml_ui_py.html  z_a92c3de99d827914_Audio_py.html  z_a92c3de99d827914_Episode_py.html  z_a92c3de99d827914_Note_py.html  z_a92c3de99d827914_Shot_py.html  z_a92c3de99d827914___init___py.html  z_a92c3de99d827914_helpers_py.html  z_c9a8877a5484dcaa_Audio_py.html  z_c9a8877a5484dcaa_Episode_py.html  z_c9a8877a5484dcaa_Note_py.html  z_c9a8877a5484dcaa_Shot_py.html  z_c9a8877a5484dcaa___init___py.html  (+15 more)
reports/junit/: junit.xml  report.html
resources/: generate_burnins.py
search/: search_index.json
src/fcp7xml_to_unreal/: __init__.py  config.yaml  xml_ui.py
src/fcp7xml_to_unreal/models/: Audio.py  Episode.py  Shot.py  helpers.py
src/fcp7xml_to_unreal/xml_helpers/: reports.py
src/premiere_to_ue/: __init__.py  config.yaml  xml_ui.py
src/premiere_to_ue/models/: Audio.py  Episode.py  Note.py  Shot.py  helpers.py
src/premiere_to_ue/xml_helpers/: reports.py  syncsketch.py
tests/: conftest.py  test_audio.py  test_episode.py  test_models_helpers.py  test_note.py  test_reports.py  test_shot.py  test_syncsketch.py  test_xml_ui.py
tests/resources/: test_XML_export_filtered.xml  test_XML_export_filtered_premiere.xml  test_XML_export_resolve.xml  test_XML_export_resolve_filtered.xml
